<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <RadioGroup
        android:id="@+id/calc_radio_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <RadioButton
            android:id="@+id/calc_radio_ucdmx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calc_ucdmx"
            android:checked="true" />

        <RadioButton
            android:id="@+id/calc_radio_dsm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calc_dsm" />

    </RadioGroup>

    <EditText
        android:id="@+id/calc_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/calc_multa_label" />

        <TextView
            android:id="@+id/calc_multa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/calc_default"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/calc_multa_desc_label" />

        <TextView
            android:id="@+id/calc_multa_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/calc_default"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:textColor="@color/secondary_text_default_material_light"
        android:textColorLink="@color/accent"
        android:text="@string/calc_desc" />

</LinearLayout>