<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/bytecraftmx"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/acerca_header" />

    <TextView
        android:id="@+id/acerca_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColorLink="@color/accent"
        android:text="@string/acerca_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/acerca_creditos_title" />

    <TextView
        android:id="@+id/creditos_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColorLink="@color/accent"
        android:textColor="@color/secondary_toolbar"
        android:text="@string/acerca_creditos_text" />

</LinearLayout>